# spot_ar_navigation

./: README.md
Spot-AR-main/: .gitignore  README.md
Spot-AR-main/Assets/: NuGet.config  WSATestCertificate.pfx  msgbrowser_settings.asset
Spot-AR-main/Assets/Icons/: README.txt  SENSEableIcons.asset
Spot-AR-main/Assets/Materials/: CameraFeedMateral.mat  CameraFeedShader.shader  CursorFocus.mat  CursorPress.mat  DestinationMarker.mat  DirectionIndicatorNormal.mat  DirectionIndicatorStopped.mat  EndPointMaterial.mat  TestCeiling.mat  TestCube.mat  TestFloor.mat  TestRamp.mat  TestWalls.mat  TutorialTargetBase.mat  TutorialTargetDown.mat
Spot-AR-main/Assets/Models/: ArrowModel.fbx
Spot-AR-main/Assets/Prefabs/: DirectionIndicatorStoppedText.prefab  HandMenu_Full.prefab  HandMenu_RampStudy.prefab  HandMenu_Small_HideOnHandDrop.prefab  SENSEableCursor.prefab  SENSEableShellHandRayPointer.prefab  SpatialMeshManager.prefab  Target.prefab  spot.prefab
Spot-AR-main/Assets/Resources/: 09-19-2023_19-05-53-345.csv  09-21-2023_19-38-24-482.csv  09-21-2023_19-53-29-572.csv  09-21-2023_20-01-58-860.csv  09-21-2023_21-54-47-300.csv  09-21-2023_22-30-48-405.csv  09-22-2023_18-50-31-677.csv  09-22-2023_20-09-03-435.csv  CameraView.prefab  CameraViewToggle.prefab  ROSConnectionPrefab.prefab
Spot-AR-main/Assets/Scenes/: Main.unity  QR.unity  URDF_Visualize_Test.unity  URDF_Visualize_Test_TEMP.unity
Spot-AR-main/Assets/Scripts/: AnchorManager.cs  CameraImageService.cs  CoordinateConverter.cs  DestinationMarker.cs  DirectionIndicator.cs  FiducialFollowManager.cs  GestureManager.cs  GoToReceivePointer.cs  HelloTestSubscriber.cs  JoystickController_SENSEable.cs  ParticipantLogger.cs  PlaybackManager.cs  PointerManager.cs  PythonConnectionDisplay.cs  ROS2CameraManager.cs  ROS2CameraSubscriber.cs  ROS2ConnectionDisplay.cs  ROS2Information.cs  ROS2Manager.cs  ROS2Publisher.cs  ROS2PublisherTest.cs  ROS2Subscriber.cs  ROS2SubscriberTest.cs  SENSEableQR.cs  SENSEableShellHandRayPointer.cs  SpatialAwarenessManager.cs  SpotJoint.cs  SpotManager.cs  SpotTransform.cs  StopHandManager.cs  StudyHandMenu.cs  TCPTestClient_Continuous.cs  TCPTestClient_Single.cs  TransformRecordingManager.cs  TutorialManager.cs  TutorialTarget.cs  VelocityManager.cs  VirtualKeyboardManager.cs
Spot-AR-main/Assets/XR/: XRGeneralSettings.asset
Spot-AR-main/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
Spot-AR-main/RoomModels/: Inside.3dm  Inside.3dmbak
Spot-AR-main/SpotControls/: README
Spot-AR-main/SpotControls/Python/: ONSSH_container_command.txt  README.md
Spot-AR-main/SpotControls/Python/senseable/services/kinect_scan_service/minerva-sensors/: .gitignore  .gitmodules  CMakeLists.txt  README.md  openports.sh  submodules.sh
Spot-AR-main/SpotControls/Python/senseable/services/kinect_scan_service/minerva-sensors/CMake/: TBBBuild.cmake
Spot-AR-main/SpotControls/Python/senseable/services/kinect_scan_service/minerva-sensors/CMake/modules/: FindCNPY.cmake
Spot-AR-main/SpotControls/Python/senseable/services/kinect_scan_service/minerva-sensors/environmental_sensors/BME680-tb/: BME680-tb.ino
Spot-AR-main/SpotControls/Python/senseable/services/kinect_scan_service/minerva-sensors/environmental_sensors/I2C-tb/: I2C-tb.ino
Spot-AR-main/SpotControls/Python/senseable/services/kinect_scan_service/minerva-sensors/environmental_sensors/temp-light-tb/: temp-light-tb.ino
Spot-AR-main/SpotControls/Python/senseable/services/kinect_scan_service/minerva-sensors/examples/: CMakeLists.txt  README.md
Spot-AR-main/SpotControls/Python/senseable/services/kinect_scan_service/minerva-sensors/examples/basic_opencv_test/: CMakeLists.txt  main.cpp
Spot-AR-main/SpotControls/Python/senseable/services/kinect_scan_service/minerva-sensors/examples/ici-test/: CMakeLists.txt  main.cpp
Spot-AR-main/SpotControls/Python/senseable/services/kinect_scan_service/minerva-sensors/examples/multiple-cameras/: Boson_Camera.cpp  Boson_Camera.h  CMakeLists.txt  Frame.h  README.md  main.cpp  tester.cpp
Spot-AR-main/SpotControls/Python/senseable/services/kinect_scan_service/minerva-sensors/examples/multiple-cameras-v2/: Boson_Camera.cpp  Boson_Camera.h  CMakeLists.txt  Frame.h  UART_Connector_wrapper.cpp  UART_Connector_wrapper.h  keyboard.cpp  keyboard.hpp  main.cpp  timer.hpp
Spot-AR-main/SpotControls/Python/senseable/services/kinect_scan_service/minerva-sensors/examples/postprocessing/: CMakeLists.txt  main.cpp  postprocessing.py
Spot-AR-main/SpotControls/Python/senseable/services/kinect_scan_service/minerva-sensors/examples/video-only/: CMakeLists.txt  main-w6.cpp  main.cpp
Spot-AR-main/SpotControls/Python/senseable/services/kinect_scan_service/minerva-sensors/external_libraries/: CMakeLists.txt
Spot-AR-main/SpotControls/Python/senseable/services/kinect_scan_service/minerva-sensors/kaptivo/: README.md  kaptivo-capture.py
Spot-AR-main/SpotControls/Python/senseable/services/kinect_scan_service/minerva-sensors/kinect/: Readme.md
Spot-AR-main/SpotControls/Python/senseable/services/kinect_scan_service/minerva-sensors/kinect/minerva/: CMakeLists.txt  Frame.h  keyboard.hpp  utilities.h
Spot-AR-main/SpotControls/Python/senseable/services/kinect_scan_service/minerva-sensors/kinect/python_tests/: detect.py  s2.py  silly.py  sync (copy).py  sync.py  viewer.py
Spot-AR-main/SpotControls/ROS/: README.md
Spot-AR-main/Study/: ConsolidateProgressTrackers.py  GetSpotTime.py  ProgressTracker.py  StudyLinks.txt  requirements.txt  run_progress_tracker.bat  toggle_recording_status.bat
Spot-AR-main/Study/Analysis/: dissertation_analysis.R  ieeevr_analysis.R  plot_single_robot.R  single_robot.R
Spot-TabletTraining/Assets/Materials/: Arrow.mat  Floor.mat  TutorialTarget.mat  Walls.mat
Spot-TabletTraining/Assets/Prefabs/: Joystick.prefab  Target.prefab
Spot-TabletTraining/Assets/Scenes/: SampleScene.unity
Spot-TabletTraining/Assets/Scripts/: Arrow.cs  CameraController.cs  SENSEableFloatingJoystick.cs  SENSEableSlider.cs  TouchscreenLogger.cs  (+2 more)
Spot-TabletTraining/ProjectSettings/: ProjectSettings.asset
(+297 files in other folders)
